<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_workcell_msgs</name>
  <version>0.0.0</version>
  <description>A package containing messages used by all workcells generically to interfact with rmf_core</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
